--- a/src/Component_Abrican/stopCard/stopCard.css
+++ b/src/Component_Abrican/stopCard/stopCard.css
@@ -18,6 +18,9 @@
     display: grid;
     grid-template-columns: repeat(2, 1fr);
     gap: 10px;
+    @media screen and  (max-width: 720px) {
+        grid-template-columns: repeat(1, 1fr);       
+    }
 }
 .stopCardDisplay{
     /* border: 0.5px solid black; */
