--- a/src/Reusable/styles/tableMap.css
+++ b/src/Reusable/styles/tableMap.css
@@ -1,18 +1,19 @@
 
 .tableMapContainer{
-    min-width: 70vw; 
+    /* min-width: 70vw;  */
     /* background-color: ;  */
-    margin-top: 0px;
+    /* margin-top: 0px; */
 }
 .tableWrapper{
-    position: relative;
+        position: relative;
+        width: 100%;
+        overflow-x: auto; /* Ensures the table is scrollable if content overflows */
     @media screen and (max-width: 720px) {
-        /* max-width: 80%; */
-        /* overflow: auto; */
+        width:"60%";
     }
 }
 .tableMap{
-    min-width: 70vw; 
+    /* min-width: 70vw;  */
     background-color: lightgray; 
 }
 
