--- a/src/Component_Abrican/Home/home.css
+++ b/src/Component_Abrican/Home/home.css
@@ -1,5 +1,8 @@
 .homeContainer{
-    padding: 1px 10px,; 
+    display: grid;
+    place-content: center;
+    /* place-items: center; */
+    padding: 1px 5px; 
     background-color: darkgray; 
     min-height: 100vh
 }
@@ -12,7 +15,7 @@
 
 @media (max-width: 720px) {
     .mapDisplay{
-        grid-template-columns: repeat(1, 1fr);  
+        grid-template-columns: repeat(2, 1fr);  
         gap: 15px; 
         padding: 5px;
     }
