--- a/src/Component_Abrican/Home/home.css
+++ b/src/Component_Abrican/Home/home.css
@@ -1,7 +1,6 @@
 .homeContainer{
     display: grid;
     place-content: center;
-    /* place-items: center; */
     padding: 1px 5px; 
     background-color: darkgray; 
     min-height: 100vh
@@ -12,11 +11,24 @@
     gap: 40px;
     margin-top: 80px;
 }
+.homeMapWrapper{
+    padding: 5px 8px;
+    border: 1.5px solid lightgray;
+    box-shadow: 1px 1px 5px 0px black;
+    border-radius: 5px;
+    background-color: white;
+    color: blue;
+    min-height: 90px;
+    min-width: 200px;
+}
 
 @media (max-width: 720px) {
     .mapDisplay{
-        grid-template-columns: repeat(2, 1fr);  
+        grid-template-columns: repeat(1, 1fr);  
         gap: 15px; 
         padding: 5px;
+    }
+    .homeMapWrapper{
+        min-width: 300px;
     }
 }
