--- a/src/Component_Abrican/SideBar/sideBarAbrican.css
+++ b/src/Component_Abrican/SideBar/sideBarAbrican.css
@@ -9,7 +9,8 @@
     border-right: 0.5px solid lightgray; 
     display: flex;
     flex-direction: column ;
-    gap: 30px
+    gap: 30px;
+    z-index: 1000;
 }
 @media screen and (max-width: 720px) {
     .sideBarContainer{
@@ -18,7 +19,7 @@
         right: 0;
         bottom: 0;
         width: 100%; 
-        padding: 4px 1px 4px 1px;
+        padding: 8px 1px 8px 1px;
         flex-direction: row ;
         min-height: 0px;
         gap: 2px;
