--- a/src/Component_Abrican/equipment/createEquipment/styles.css
+++ b/src/Component_Abrican/equipment/createEquipment/styles.css
@@ -1,9 +1,16 @@
 .equipmentContainer{
         display: grid;
-        /* display: flex;
-        flex-direction: column; */
         position: relative;
         justify-content: center;
         align-items: center;
-        background-color: darkgray,
+        background-color: darkgray;
+        min-height: 100vh;
+
+        /* display: flex;
+        justify-content: center;
+        background-color: darkgray;
+        background-size:cover;
+        height:max-content;
+        min-height: 100vh; */
+
 }
