--- a/src/Reusable/styles/tableMap.css
+++ b/src/Reusable/styles/tableMap.css
@@ -2,7 +2,7 @@
 .tableMapContainer{
     display: flex;
     flex-direction: column;
-    justify-content: center;
+    /* justify-content: center; */
 }
 .tableWrapper{
         position: relative;
